# yew-suzuri

./: .env.example  .firebaserc  .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  firebase.json  index.html  main.js  package-lock.json  package.json  webpack.config.js
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
nachiguro/: Cargo.toml
nachiguro/src/: app_bar.rs  app_bar_actions.rs  app_bar_leading.rs  app_bar_title.rs  avatar.rs  button.rs  card.rs  col.rs  container.rs  full_modal.rs  full_modal_body.rs  full_modal_contents.rs  heading.rs  image.rs  lib.rs  list_divider.rs  list_group.rs  list_tile.rs  list_tile_leading.rs  list_tile_title.rs  list_tile_trailing.rs  list_view.rs  paragraph.rs  row.rs  skeleton.rs  text_link.rs  textfield.rs  types.rs
nachiguro/src/skeleton/: mod.rs  skeleton.rs
nachiguro/src/types/: background_color.rs  col_num.rs  heading_level.rs  list_divider_element.rs  offset_num.rs  size.rs
src/: api.rs  app.rs  components.rs  constants.rs.example  lib.rs  models.rs  pages.rs  route.rs  routes.rs  style.scss
src/app/model/: product.rs
src/app/models/: product.rs
src/components/: header.rs  logo.rs  mod.rs  product_card.rs  search_full_modal.rs  skeleton_product_card.rs
src/components/header/: header.rs
src/components/product_card/: mod.rs  product_card.rs  skeleton_product_card.rs
src/components/search_full_modal/: item_list_view.rs
src/components/user_card/: mod.rs  user_card.rs
src/models/: item.rs  material.rs  mod.rs  product.rs  user.rs
src/pages/: cart.rs  favorite.rs  home.rs  item_detail.rs  mod.rs  my_shop.rs  product_detail.rs  search.rs  search_result.rs  user_detail.rs
src/pages/home/: home.rs  mod.rs
src/pages/item_detail/: item_detail.rs  mod.rs
src/pages/product_detail/: breadcrumbs.rs  mod.rs  user_card.rs  (+6 more)
static/: index.html
(+9 files in other folders)
