[package]
name = "yew-suzuri"
version = "0.1.0"
description = "SUZURI"
repository = "https://github.com/putchom/yew-suzuri"
license-file = "LICENSE"
authors = ["putchom <putchom8@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.40"
console_error_panic_hook = "0.1.6"
nachiguro = { path = "nachiguro", features = ["full"] }
num-format = "0.4.0"
serde = "1.0.126"
wasm-bindgen = "0.2.74"
yew = "0.18.0"
