[package]
name = "nachiguro"
version = "0.1.0"
authors = ["putchom <putchom8@gmail.com>"]
edition = "2018"
repository = "https://github.com/putchom/yew-suzuri"
description = "Yew wrapper for Nachiguro Web Components"

[dependencies]
wasm-bindgen = "0.2.74"
yew = "0.18.0"
yew-router = "0.15.0"

[features]
app-bar = []
avatar = []
button = []
card = []
col = []
container = []
full-modal = []
heading = []
image = []
list-divider = []
list-group = []
list-tile = []
list-view = []
paragraph = []
row = []
skeleton = []
text-link = []
textfield = []
full = [
  "app-bar",
  "avatar",
  "button",
  "card",
  "col",
  "container",
  "full-modal",
  "heading",
  "image",
  "list-divider",
  "list-group",
  "list-tile",
  "list-view",
  "paragraph",
  "row",
  "skeleton",
  "text-link",
  "textfield",
]
default = ["full"]